Handling Missing Data Completed

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,19 @@
       "889    male  26.0      0      0            111369  30.0000  C148        C  \n",
       "890    male  32.0      0      0            370376   7.7500   NaN        Q  \n",
       "\n",
-      "[891 rows x 11 columns]\n"
+      "[891 rows x 11 columns]\n",
+      "0      0\n",
+      "1      1\n",
+      "2      1\n",
+      "3      1\n",
+      "4      0\n",
+      "      ..\n",
+      "886    0\n",
+      "887    1\n",
+      "888    0\n",
+      "889    1\n",
+      "890    0\n",
+      "Name: Survived, Length: 891, dtype: int64\n"
      ]
     }
    ],
@@ -48,7 +60,50 @@
     "data=pd.read_csv(\"../data/raw/train.csv\",delimiter=\",\")\n",
     "\n",
     "y_train=data[\"Survived\"]\n",
-    "x_train=data.drop(columns=[\"Survived\"])"
+    "x_train=data.drop(columns=[\"Survived\"])\n",
+    "\n",
+    "print(x_train)\n",
+    "\n",
+    "print(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e317e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [PassengerId, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [PassengerId, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Filling missing values of age and Embarked\n",
+    "\n",
+    "x_train[\"Age\"]=x_train.groupby([\"Pclass\",\"Sex\"])[\"Age\"].transform(lambda x:x.fillna(x.median()))\n",
+    "\n",
+    "x_train[\"Embarked\"]=x_train[\"Embarked\"].ffill()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "81b28766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#One Hot encoding\n",
+    "# x_train=pd.get_dummies(x_train,columns=[\"Pclass\",\"Sex\",\"Embarked\"])\n",
+    "# print(x_train)"
    ]
   }
  ],
