Feature Engineering Completed

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -36,19 +36,7 @@
       "889    male  26.0      0      0            111369  30.0000  C148        C  \n",
       "890    male  32.0      0      0            370376   7.7500   NaN        Q  \n",
       "\n",
-      "[891 rows x 11 columns]\n",
-      "0      0\n",
-      "1      1\n",
-      "2      1\n",
-      "3      1\n",
-      "4      0\n",
-      "      ..\n",
-      "886    0\n",
-      "887    1\n",
-      "888    0\n",
-      "889    1\n",
-      "890    0\n",
-      "Name: Survived, Length: 891, dtype: int64\n"
+      "[891 rows x 11 columns]\n"
      ]
     }
    ],
@@ -62,30 +50,15 @@
     "y_train=data[\"Survived\"]\n",
     "x_train=data.drop(columns=[\"Survived\"])\n",
     "\n",
-    "print(x_train)\n",
-    "\n",
-    "print(y_train)"
+    "print(x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b1e317e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [PassengerId, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked]\n",
-      "Index: []\n",
-      "Empty DataFrame\n",
-      "Columns: [PassengerId, Pclass, Name, Sex, Age, SibSp, Parch, Ticket, Fare, Cabin, Embarked]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Filling missing values of age and Embarked\n",
     "\n",
@@ -96,15 +69,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "81b28766",
+   "execution_count": 12,
+   "id": "c1c1de64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#One Hot encoding\n",
-    "# x_train=pd.get_dummies(x_train,columns=[\"Pclass\",\"Sex\",\"Embarked\"])\n",
-    "# print(x_train)"
+    "#Feature Engineering\n",
+    "x_train[\"FamilySize\"]=x_train[\"SibSp\"]+x_train[\"Parch\"]+1\n",
+    "\n",
+    "x_train[\"isAlone\"]=x_train[\"FamilySize\"]==1\n",
+    "\n",
+    "#Extracting Titles from names\n",
+    "x_train[\"Title\"]=x_train[\"Name\"].str.extract(r\",\\s*([^\\.]+)\\.\")\n",
+    "x_train[\"Title\"]=x_train[\"Title\"].replace([\"Mlle\",\"Ms\"],\"Miss\")\n",
+    "x_train[\"Title\"]=x_train[\"Title\"].replace([\"Mme\"],\"Mrs\")\n",
+    "#Extracting ticket Class or group\n",
+    "x_train[\"TicketPrefix\"]=x_train[\"Ticket\"].str.extract(r\"^([A-Za-z./]+)\")\n",
+    "x_train[\"TicketPrefix\"]=x_train[\"TicketPrefix\"].fillna(\"Unknown\")\n",
+    "\n",
+    "#Extracting Cabin Floor\n",
+    "x_train[\"CabinLetter\"]=x_train[\"Cabin\"].str[0]\n",
+    "x_train[\"CabinLetter\"]=x_train[\"CabinLetter\"].fillna(\"Unknown\")\n",
+    "\n",
+    "\n",
+    "x_train=x_train.drop(columns=[\"SibSp\",\"Parch\",\"Name\",\"Ticket\",\"Cabin\"])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81b28766",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
