--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -97,11 +97,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "81b28766",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     PassengerId   Age     Fare  FamilySize  isAlone TicketPrefix CabinLetter  \\\n",
+      "0              1  22.0   7.2500           2    False           A/     Unknown   \n",
+      "1              2  38.0  71.2833           2    False           PC           C   \n",
+      "2              3  26.0   7.9250           1     True       STON/O     Unknown   \n",
+      "3              4  35.0  53.1000           2    False      Unknown           C   \n",
+      "4              5  35.0   8.0500           1     True      Unknown     Unknown   \n",
+      "..           ...   ...      ...         ...      ...          ...         ...   \n",
+      "886          887  27.0  13.0000           1     True      Unknown     Unknown   \n",
+      "887          888  19.0  30.0000           1     True      Unknown           B   \n",
+      "888          889  21.5  23.4500           4    False        W./C.     Unknown   \n",
+      "889          890  26.0  30.0000           1     True      Unknown           C   \n",
+      "890          891  32.0   7.7500           1     True      Unknown     Unknown   \n",
+      "\n",
+      "     Pclass_1  Pclass_2  Pclass_3  ...  Title_Jonkheer  Title_Lady  \\\n",
+      "0       False     False      True  ...           False       False   \n",
+      "1        True     False     False  ...           False       False   \n",
+      "2       False     False      True  ...           False       False   \n",
+      "3        True     False     False  ...           False       False   \n",
+      "4       False     False      True  ...           False       False   \n",
+      "..        ...       ...       ...  ...             ...         ...   \n",
+      "886     False      True     False  ...           False       False   \n",
+      "887      True     False     False  ...           False       False   \n",
+      "888     False     False      True  ...           False       False   \n",
+      "889      True     False     False  ...           False       False   \n",
+      "890     False     False      True  ...           False       False   \n",
+      "\n",
+      "     Title_Major  Title_Master  Title_Miss  Title_Mr  Title_Mrs  Title_Rev  \\\n",
+      "0          False         False       False      True      False      False   \n",
+      "1          False         False       False     False       True      False   \n",
+      "2          False         False        True     False      False      False   \n",
+      "3          False         False       False     False       True      False   \n",
+      "4          False         False       False      True      False      False   \n",
+      "..           ...           ...         ...       ...        ...        ...   \n",
+      "886        False         False       False     False      False       True   \n",
+      "887        False         False        True     False      False      False   \n",
+      "888        False         False        True     False      False      False   \n",
+      "889        False         False       False      True      False      False   \n",
+      "890        False         False       False      True      False      False   \n",
+      "\n",
+      "     Title_Sir  Title_the Countess  \n",
+      "0        False               False  \n",
+      "1        False               False  \n",
+      "2        False               False  \n",
+      "3        False               False  \n",
+      "4        False               False  \n",
+      "..         ...                 ...  \n",
+      "886      False               False  \n",
+      "887      False               False  \n",
+      "888      False               False  \n",
+      "889      False               False  \n",
+      "890      False               False  \n",
+      "\n",
+      "[891 rows x 29 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#One Hot encoding\n",
+    "x_train=pd.get_dummies(x_train,columns=[\"Pclass\",\"Sex\",\"Embarked\",\"Title\"])\n",
+    "print(x_train)"
+   ]
   }
  ],
  "metadata": {
