Storing the Processed Training Data Completed

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data=pd.read_csv(\"../data/raw/train.csv\",delimiter=\",\")\n",
+    "file_train=\"../data/raw/train.csv\"\n",
+    "file_test=\"../data/raw/test.csv\"\n",
+    "\n",
+    "\n",
+    "data=pd.read_csv(file_train,delimiter=\",\")\n",
     "\n",
     "y_train=data[\"Survived\"]\n",
     "x_train=data.drop(columns=[\"Survived\"])\n",
@@ -165,6 +169,21 @@
     "#One Hot encoding\n",
     "x_train=pd.get_dummies(x_train,columns=[\"Pclass\",\"Sex\",\"Embarked\",\"Title\"])\n",
     "print(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "56e4b3cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Storing the Processed Data\n",
+    "filePath_train=\"../data/processed/train.csv\"\n",
+    "filePath_test=\"../data/processed/test.csv\"\n",
+    "\n",
+    "\n",
+    "x_train.to_csv(filePath_train)"
    ]
   }
  ],
