--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "b1e317e0",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "c1c1de64",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "81b28766",
    "metadata": {},
    "outputs": [
@@ -109,71 +109,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     PassengerId   Age     Fare  FamilySize  isAlone TicketPrefix CabinLetter  \\\n",
-      "0              1  22.0   7.2500           2    False           A/     Unknown   \n",
-      "1              2  38.0  71.2833           2    False           PC           C   \n",
-      "2              3  26.0   7.9250           1     True       STON/O     Unknown   \n",
-      "3              4  35.0  53.1000           2    False      Unknown           C   \n",
-      "4              5  35.0   8.0500           1     True      Unknown     Unknown   \n",
-      "..           ...   ...      ...         ...      ...          ...         ...   \n",
-      "886          887  27.0  13.0000           1     True      Unknown     Unknown   \n",
-      "887          888  19.0  30.0000           1     True      Unknown           B   \n",
-      "888          889  21.5  23.4500           4    False        W./C.     Unknown   \n",
-      "889          890  26.0  30.0000           1     True      Unknown           C   \n",
-      "890          891  32.0   7.7500           1     True      Unknown     Unknown   \n",
+      "     PassengerId   Age     Fare  FamilySize  isAlone  Pclass_1  Pclass_2  \\\n",
+      "0              1  22.0   7.2500           2    False     False     False   \n",
+      "1              2  38.0  71.2833           2    False      True     False   \n",
+      "2              3  26.0   7.9250           1     True     False     False   \n",
+      "3              4  35.0  53.1000           2    False      True     False   \n",
+      "4              5  35.0   8.0500           1     True     False     False   \n",
+      "..           ...   ...      ...         ...      ...       ...       ...   \n",
+      "886          887  27.0  13.0000           1     True     False      True   \n",
+      "887          888  19.0  30.0000           1     True      True     False   \n",
+      "888          889  21.5  23.4500           4    False     False     False   \n",
+      "889          890  26.0  30.0000           1     True      True     False   \n",
+      "890          891  32.0   7.7500           1     True     False     False   \n",
       "\n",
-      "     Pclass_1  Pclass_2  Pclass_3  ...  Title_Jonkheer  Title_Lady  \\\n",
-      "0       False     False      True  ...           False       False   \n",
-      "1        True     False     False  ...           False       False   \n",
-      "2       False     False      True  ...           False       False   \n",
-      "3        True     False     False  ...           False       False   \n",
-      "4       False     False      True  ...           False       False   \n",
-      "..        ...       ...       ...  ...             ...         ...   \n",
-      "886     False      True     False  ...           False       False   \n",
-      "887      True     False     False  ...           False       False   \n",
-      "888     False     False      True  ...           False       False   \n",
-      "889      True     False     False  ...           False       False   \n",
-      "890     False     False      True  ...           False       False   \n",
+      "     Pclass_3  Sex_female  Sex_male  ...  TicketPrefix_WE/P  CabinLetter_A  \\\n",
+      "0        True       False      True  ...              False          False   \n",
+      "1       False        True     False  ...              False          False   \n",
+      "2        True        True     False  ...              False          False   \n",
+      "3       False        True     False  ...              False          False   \n",
+      "4        True       False      True  ...              False          False   \n",
+      "..        ...         ...       ...  ...                ...            ...   \n",
+      "886     False       False      True  ...              False          False   \n",
+      "887     False        True     False  ...              False          False   \n",
+      "888      True        True     False  ...              False          False   \n",
+      "889     False       False      True  ...              False          False   \n",
+      "890      True       False      True  ...              False          False   \n",
       "\n",
-      "     Title_Major  Title_Master  Title_Miss  Title_Mr  Title_Mrs  Title_Rev  \\\n",
-      "0          False         False       False      True      False      False   \n",
-      "1          False         False       False     False       True      False   \n",
-      "2          False         False        True     False      False      False   \n",
-      "3          False         False       False     False       True      False   \n",
-      "4          False         False       False      True      False      False   \n",
-      "..           ...           ...         ...       ...        ...        ...   \n",
-      "886        False         False       False     False      False       True   \n",
-      "887        False         False        True     False      False      False   \n",
-      "888        False         False        True     False      False      False   \n",
-      "889        False         False       False      True      False      False   \n",
-      "890        False         False       False      True      False      False   \n",
+      "     CabinLetter_B  CabinLetter_C  CabinLetter_D  CabinLetter_E  \\\n",
+      "0            False          False          False          False   \n",
+      "1            False           True          False          False   \n",
+      "2            False          False          False          False   \n",
+      "3            False           True          False          False   \n",
+      "4            False          False          False          False   \n",
+      "..             ...            ...            ...            ...   \n",
+      "886          False          False          False          False   \n",
+      "887           True          False          False          False   \n",
+      "888          False          False          False          False   \n",
+      "889          False           True          False          False   \n",
+      "890          False          False          False          False   \n",
       "\n",
-      "     Title_Sir  Title_the Countess  \n",
-      "0        False               False  \n",
-      "1        False               False  \n",
-      "2        False               False  \n",
-      "3        False               False  \n",
-      "4        False               False  \n",
-      "..         ...                 ...  \n",
-      "886      False               False  \n",
-      "887      False               False  \n",
-      "888      False               False  \n",
-      "889      False               False  \n",
-      "890      False               False  \n",
+      "     CabinLetter_F  CabinLetter_G  CabinLetter_T  CabinLetter_Unknown  \n",
+      "0            False          False          False                 True  \n",
+      "1            False          False          False                False  \n",
+      "2            False          False          False                 True  \n",
+      "3            False          False          False                False  \n",
+      "4            False          False          False                 True  \n",
+      "..             ...            ...            ...                  ...  \n",
+      "886          False          False          False                 True  \n",
+      "887          False          False          False                False  \n",
+      "888          False          False          False                 True  \n",
+      "889          False          False          False                False  \n",
+      "890          False          False          False                 True  \n",
       "\n",
-      "[891 rows x 29 columns]\n"
+      "[891 rows x 76 columns]\n"
      ]
     }
    ],
    "source": [
     "#One Hot encoding\n",
-    "x_train=pd.get_dummies(x_train,columns=[\"Pclass\",\"Sex\",\"Embarked\",\"Title\"])\n",
+    "x_train=pd.get_dummies(x_train,columns=[\"Pclass\",\"Sex\",\"Embarked\",\"Title\",\"TicketPrefix\",\"CabinLetter\"])\n",
     "print(x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "56e4b3cd",
    "metadata": {},
    "outputs": [],
