fixed index issues

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b1e317e0",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c1c1de64",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "81b28766",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "56e4b3cd",
    "metadata": {},
    "outputs": [],
@@ -182,8 +182,10 @@
     "filePath_train=\"../data/processed/train.csv\"\n",
     "filePath_test=\"../data/processed/test.csv\"\n",
     "\n",
+    "filePath_train_output=\"../data/processed/train_output.csv\"\n",
     "\n",
-    "x_train.to_csv(filePath_train)"
+    "y_train.to_csv(filePath_train_output,index=False)\n",
+    "x_train.to_csv(filePath_train,index=False)"
    ]
   }
  ],
