Preprocessing for Testing Data

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -10,33 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     PassengerId  Pclass                                               Name  \\\n",
-      "0              1       3                            Braund, Mr. Owen Harris   \n",
-      "1              2       1  Cumings, Mrs. John Bradley (Florence Briggs Th...   \n",
-      "2              3       3                             Heikkinen, Miss. Laina   \n",
-      "3              4       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)   \n",
-      "4              5       3                           Allen, Mr. William Henry   \n",
-      "..           ...     ...                                                ...   \n",
-      "886          887       2                              Montvila, Rev. Juozas   \n",
-      "887          888       1                       Graham, Miss. Margaret Edith   \n",
-      "888          889       3           Johnston, Miss. Catherine Helen \"Carrie\"   \n",
-      "889          890       1                              Behr, Mr. Karl Howell   \n",
-      "890          891       3                                Dooley, Mr. Patrick   \n",
+      "     PassengerId  Pclass                                          Name  \\\n",
+      "0            892       3                              Kelly, Mr. James   \n",
+      "1            893       3              Wilkes, Mrs. James (Ellen Needs)   \n",
+      "2            894       2                     Myles, Mr. Thomas Francis   \n",
+      "3            895       3                              Wirz, Mr. Albert   \n",
+      "4            896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)   \n",
+      "..           ...     ...                                           ...   \n",
+      "413         1305       3                            Spector, Mr. Woolf   \n",
+      "414         1306       1                  Oliva y Ocana, Dona. Fermina   \n",
+      "415         1307       3                  Saether, Mr. Simon Sivertsen   \n",
+      "416         1308       3                           Ware, Mr. Frederick   \n",
+      "417         1309       3                      Peter, Master. Michael J   \n",
       "\n",
-      "        Sex   Age  SibSp  Parch            Ticket     Fare Cabin Embarked  \n",
-      "0      male  22.0      1      0         A/5 21171   7.2500   NaN        S  \n",
-      "1    female  38.0      1      0          PC 17599  71.2833   C85        C  \n",
-      "2    female  26.0      0      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-      "3    female  35.0      1      0            113803  53.1000  C123        S  \n",
-      "4      male  35.0      0      0            373450   8.0500   NaN        S  \n",
-      "..      ...   ...    ...    ...               ...      ...   ...      ...  \n",
-      "886    male  27.0      0      0            211536  13.0000   NaN        S  \n",
-      "887  female  19.0      0      0            112053  30.0000   B42        S  \n",
-      "888  female   NaN      1      2        W./C. 6607  23.4500   NaN        S  \n",
-      "889    male  26.0      0      0            111369  30.0000  C148        C  \n",
-      "890    male  32.0      0      0            370376   7.7500   NaN        Q  \n",
+      "        Sex   Age  SibSp  Parch              Ticket      Fare Cabin Embarked  \n",
+      "0      male  34.5      0      0              330911    7.8292   NaN        Q  \n",
+      "1    female  47.0      1      0              363272    7.0000   NaN        S  \n",
+      "2      male  62.0      0      0              240276    9.6875   NaN        Q  \n",
+      "3      male  27.0      0      0              315154    8.6625   NaN        S  \n",
+      "4    female  22.0      1      1             3101298   12.2875   NaN        S  \n",
+      "..      ...   ...    ...    ...                 ...       ...   ...      ...  \n",
+      "413    male   NaN      0      0           A.5. 3236    8.0500   NaN        S  \n",
+      "414  female  39.0      0      0            PC 17758  108.9000  C105        C  \n",
+      "415    male  38.5      0      0  SOTON/O.Q. 3101262    7.2500   NaN        S  \n",
+      "416    male   NaN      0      0              359309    8.0500   NaN        S  \n",
+      "417    male   NaN      1      1                2668   22.3583   NaN        C  \n",
       "\n",
-      "[891 rows x 11 columns]\n"
+      "[418 rows x 11 columns]\n"
      ]
     }
    ],
@@ -45,21 +45,27 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "file_train=\"../data/raw/train.csv\"\n",
-    "file_test=\"../data/raw/test.csv\"\n",
+    "file_path=\"../data/raw/train.csv\"\n",
+    "isTrain=True\n",
+    "def AssignedPath(Train):\n",
+    "    if Train==False:\n",
+    "        return False,\"../data/raw/test.csv\"\n",
     "\n",
     "\n",
-    "data=pd.read_csv(file_train,delimiter=\",\")\n",
-    "\n",
-    "y_train=data[\"Survived\"]\n",
-    "x_train=data.drop(columns=[\"Survived\"])\n",
-    "\n",
+    "isTrain,file_path=AssignedPath(False)\n",
+    "data=pd.read_csv(file_path,delimiter=\",\")\n",
+    "if isTrain:\n",
+    "    y_train=data[\"Survived\"]\n",
+    "    x_train=data.drop(columns=[\"Survived\"])\n",
+    "else:\n",
+    "    \n",
+    "    x_train=data\n",
     "print(x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "b1e317e0",
    "metadata": {},
    "outputs": [],
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "c1c1de64",
    "metadata": {},
    "outputs": [],
@@ -101,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "81b28766",
    "metadata": {},
    "outputs": [
@@ -109,59 +115,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     PassengerId   Age     Fare  FamilySize  isAlone  Pclass_1  Pclass_2  \\\n",
-      "0              1  22.0   7.2500           2    False     False     False   \n",
-      "1              2  38.0  71.2833           2    False      True     False   \n",
-      "2              3  26.0   7.9250           1     True     False     False   \n",
-      "3              4  35.0  53.1000           2    False      True     False   \n",
-      "4              5  35.0   8.0500           1     True     False     False   \n",
-      "..           ...   ...      ...         ...      ...       ...       ...   \n",
-      "886          887  27.0  13.0000           1     True     False      True   \n",
-      "887          888  19.0  30.0000           1     True      True     False   \n",
-      "888          889  21.5  23.4500           4    False     False     False   \n",
-      "889          890  26.0  30.0000           1     True      True     False   \n",
-      "890          891  32.0   7.7500           1     True     False     False   \n",
+      "     PassengerId   Age      Fare  FamilySize  isAlone  Pclass_1  Pclass_2  \\\n",
+      "0            892  34.5    7.8292           1     True     False     False   \n",
+      "1            893  47.0    7.0000           2    False     False     False   \n",
+      "2            894  62.0    9.6875           1     True     False      True   \n",
+      "3            895  27.0    8.6625           1     True     False     False   \n",
+      "4            896  22.0   12.2875           3    False     False     False   \n",
+      "..           ...   ...       ...         ...      ...       ...       ...   \n",
+      "413         1305  24.0    8.0500           1     True     False     False   \n",
+      "414         1306  39.0  108.9000           1     True      True     False   \n",
+      "415         1307  38.5    7.2500           1     True     False     False   \n",
+      "416         1308  24.0    8.0500           1     True     False     False   \n",
+      "417         1309  24.0   22.3583           3    False     False     False   \n",
       "\n",
-      "     Pclass_3  Sex_female  Sex_male  ...  TicketPrefix_WE/P  CabinLetter_A  \\\n",
-      "0        True       False      True  ...              False          False   \n",
-      "1       False        True     False  ...              False          False   \n",
-      "2        True        True     False  ...              False          False   \n",
-      "3       False        True     False  ...              False          False   \n",
-      "4        True       False      True  ...              False          False   \n",
-      "..        ...         ...       ...  ...                ...            ...   \n",
-      "886     False       False      True  ...              False          False   \n",
-      "887     False        True     False  ...              False          False   \n",
-      "888      True        True     False  ...              False          False   \n",
-      "889     False       False      True  ...              False          False   \n",
-      "890      True       False      True  ...              False          False   \n",
+      "     Pclass_3  Sex_female  Sex_male  ...  TicketPrefix_W./C.  \\\n",
+      "0        True       False      True  ...               False   \n",
+      "1        True        True     False  ...               False   \n",
+      "2       False       False      True  ...               False   \n",
+      "3        True       False      True  ...               False   \n",
+      "4        True        True     False  ...               False   \n",
+      "..        ...         ...       ...  ...                 ...   \n",
+      "413      True       False      True  ...               False   \n",
+      "414     False        True     False  ...               False   \n",
+      "415      True       False      True  ...               False   \n",
+      "416      True       False      True  ...               False   \n",
+      "417      True       False      True  ...               False   \n",
       "\n",
-      "     CabinLetter_B  CabinLetter_C  CabinLetter_D  CabinLetter_E  \\\n",
+      "     TicketPrefix_W.E.P.  CabinLetter_A  CabinLetter_B  CabinLetter_C  \\\n",
+      "0                  False          False          False          False   \n",
+      "1                  False          False          False          False   \n",
+      "2                  False          False          False          False   \n",
+      "3                  False          False          False          False   \n",
+      "4                  False          False          False          False   \n",
+      "..                   ...            ...            ...            ...   \n",
+      "413                False          False          False          False   \n",
+      "414                False          False          False           True   \n",
+      "415                False          False          False          False   \n",
+      "416                False          False          False          False   \n",
+      "417                False          False          False          False   \n",
+      "\n",
+      "     CabinLetter_D  CabinLetter_E  CabinLetter_F  CabinLetter_G  \\\n",
       "0            False          False          False          False   \n",
-      "1            False           True          False          False   \n",
+      "1            False          False          False          False   \n",
       "2            False          False          False          False   \n",
-      "3            False           True          False          False   \n",
+      "3            False          False          False          False   \n",
       "4            False          False          False          False   \n",
       "..             ...            ...            ...            ...   \n",
-      "886          False          False          False          False   \n",
-      "887           True          False          False          False   \n",
-      "888          False          False          False          False   \n",
-      "889          False           True          False          False   \n",
-      "890          False          False          False          False   \n",
+      "413          False          False          False          False   \n",
+      "414          False          False          False          False   \n",
+      "415          False          False          False          False   \n",
+      "416          False          False          False          False   \n",
+      "417          False          False          False          False   \n",
       "\n",
-      "     CabinLetter_F  CabinLetter_G  CabinLetter_T  CabinLetter_Unknown  \n",
-      "0            False          False          False                 True  \n",
-      "1            False          False          False                False  \n",
-      "2            False          False          False                 True  \n",
-      "3            False          False          False                False  \n",
-      "4            False          False          False                 True  \n",
-      "..             ...            ...            ...                  ...  \n",
-      "886          False          False          False                 True  \n",
-      "887          False          False          False                False  \n",
-      "888          False          False          False                 True  \n",
-      "889          False          False          False                False  \n",
-      "890          False          False          False                 True  \n",
+      "     CabinLetter_Unknown  \n",
+      "0                   True  \n",
+      "1                   True  \n",
+      "2                   True  \n",
+      "3                   True  \n",
+      "4                   True  \n",
+      "..                   ...  \n",
+      "413                 True  \n",
+      "414                False  \n",
+      "415                 True  \n",
+      "416                 True  \n",
+      "417                 True  \n",
       "\n",
-      "[891 rows x 76 columns]\n"
+      "[418 rows x 59 columns]\n"
      ]
     }
    ],
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "56e4b3cd",
    "metadata": {},
    "outputs": [],
@@ -184,8 +203,11 @@
     "\n",
     "filePath_train_output=\"../data/processed/train_output.csv\"\n",
     "\n",
-    "y_train.to_csv(filePath_train_output,index=False)\n",
-    "x_train.to_csv(filePath_train,index=False)"
+    "if isTrain:\n",
+    "    y_train.to_csv(filePath_train_output,index=False)\n",
+    "    x_train.to_csv(filePath_train,index=False)\n",
+    "else:\n",
+    "    x_train.to_csv(filePath_test,index=False)"
    ]
   }
  ],
