--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
     "        return False,\"../data/raw/test.csv\"\n",
     "\n",
     "\n",
-    "isTrain,file_path=AssignedPath(False)\n",
+    "#isTrain,file_path=AssignedPath(False)\n",
     "data=pd.read_csv(file_path,delimiter=\",\")\n",
     "if isTrain:\n",
     "    y_train=data[\"Survived\"]\n",
