fixed Some important feature Engineering issues

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "13f0fc19",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
     "        return False,\"../data/raw/test.csv\"\n",
     "\n",
     "\n",
-    "#isTrain,file_path=AssignedPath(False)\n",
+    "isTrain,file_path=AssignedPath(False)\n",
     "data=pd.read_csv(file_path,delimiter=\",\")\n",
     "if isTrain:\n",
     "    y_train=data[\"Survived\"]\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "id": "b1e317e0",
    "metadata": {},
    "outputs": [],
@@ -74,12 +74,14 @@
     "\n",
     "x_train[\"Age\"]=x_train.groupby([\"Pclass\",\"Sex\"])[\"Age\"].transform(lambda x:x.fillna(x.median()))\n",
     "\n",
+    "x_train[\"Fare\"]=x_train.groupby([\"Pclass\",\"Sex\"])[\"Fare\"].transform(lambda x:x.fillna(x.median()))\n",
+    "\n",
     "x_train[\"Embarked\"]=x_train[\"Embarked\"].ffill()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "id": "c1c1de64",
    "metadata": {},
    "outputs": [],
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "id": "81b28766",
    "metadata": {},
    "outputs": [
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "id": "56e4b3cd",
    "metadata": {},
    "outputs": [],
