Training on Random Forest Algorithm Completed

--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "id": "e72006fd",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,8 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score,confusion_matrix,classification_report\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "x_train=pd.read_csv(\"../data/processed/train.csv\",delimiter=\",\").drop(columns=\"PassengerId\")\n",
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "525547c7",
    "metadata": {},
    "outputs": [
@@ -70,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score 0.8156424581005587\n",
-      "Confusion metrics [[90 15]\n",
+      "Accuracy Score: 0.8156424581005587\n",
+      "Confusion metrics: [[90 15]\n",
       " [18 56]]\n",
-      "Classification Report               precision    recall  f1-score   support\n",
+      "Classification Report:               precision    recall  f1-score   support\n",
       "\n",
       "           0       0.83      0.86      0.85       105\n",
       "           1       0.79      0.76      0.77        74\n",
@@ -82,14 +84,6 @@
       "   macro avg       0.81      0.81      0.81       179\n",
       "weighted avg       0.81      0.82      0.82       179\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py:1406: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
@@ -108,7 +102,7 @@
     "    (\"clf\",LogisticRegression(max_iter=1000,random_state=42))\n",
     "])\n",
     "\n",
-    "model.fit(x_train,y_train)\n",
+    "model.fit(x_train,y_train.to_numpy().ravel())\n",
     "\n",
     "\n",
     "prediction=model.predict(cv_train)\n",
@@ -117,6 +111,51 @@
     "print(\"Accuracy Score:\",accuracy_score(cv_train_output,prediction))\n",
     "print(\"Confusion metrics:\",confusion_matrix(cv_train_output,prediction))\n",
     "print(\"Classification Report:\",classification_report(cv_train_output,prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d8c3c861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Algorithm Accuracy: 0.8435754189944135\n",
+      "Classification Report:               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.88      0.87       105\n",
+      "           1       0.82      0.80      0.81        74\n",
+      "\n",
+      "    accuracy                           0.84       179\n",
+      "   macro avg       0.84      0.84      0.84       179\n",
+      "weighted avg       0.84      0.84      0.84       179\n",
+      "\n",
+      "CV Accuracy Mean: 0.8258248793460062\n",
+      "CV Accuracy Std: 0.01454970817259619\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Training the model using Random Forest Algorithm\n",
+    "Random_forest_model=Pipeline([\n",
+    "    (\"pre\",preprocessing),\n",
+    "    (\"clf\",RandomForestClassifier(n_estimators=64,max_depth=20,min_samples_split=10,min_samples_leaf=1,random_state=42))\n",
+    "])\n",
+    "\n",
+    "Random_forest_model.fit(x_train,y_train.to_numpy().ravel())\n",
+    "\n",
+    "Random_forest_prediction=Random_forest_model.predict(cv_train)\n",
+    "\n",
+    "print(\"Random Forest Algorithm Accuracy:\",accuracy_score(cv_train_output,Random_forest_prediction))\n",
+    "print(\"Classification Report:\",classification_report(cv_train_output,Random_forest_prediction))\n",
+    "\n",
+    "scores = cross_val_score(Random_forest_model, x_train, y_train.to_numpy().ravel(), cv=5, scoring=\"accuracy\")\n",
+    "\n",
+    "print(\"CV Accuracy Mean:\", scores.mean())\n",
+    "print(\"CV Accuracy Std:\", scores.std())"
    ]
   }
  ],
